<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="18dp"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/gradient2">


    <ImageView
        android:layout_width="220dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/akblogouas"
        android:contentDescription="Logo UAS AKB" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:fontFamily="sans-serif-condensed"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/Password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="sans-serif-condensed"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="Login"
        android:background="@color/primary"
        android:textColor="@color/primary_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp">
        <TextView
            android:id="@+id/donthave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:layout_weight="1"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/linkRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_one"
            android:layout_weight="1"
            android:textColor="@android:color/holo_blue_dark"/>
    </LinearLayout>



</LinearLayout>