<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_dialog_rounded"
    android:padding="16dp"
    android:layout_marginBottom="5dp">

    <TextView
        android:id="@+id/labelNIM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/nim"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/colon"
        android:layout_marginStart="55dp"/>

    <TextView
        android:id="@+id/nimTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NIM"
        android:layout_marginStart="65dp"/>

    <TextView
        android:id="@+id/labelNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/nama"
        android:layout_below="@id/labelNIM"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/colon"
        android:layout_marginStart="55dp"/>

    <TextView
        android:id="@+id/namaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nama"
        android:layout_below="@id/nimTextView"
        android:layout_marginStart="65dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/colon"
        android:layout_below="@id/nimTextView"
        android:layout_marginStart="55dp"/>

    <TextView
        android:id="@+id/labelKelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/kelas"
        android:layout_below="@id/labelNama"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/colon"
        android:layout_below="@id/namaTextView"
        android:layout_marginStart="55dp"/>

    <TextView
        android:id="@+id/kelasTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kelas"
        android:layout_below="@id/namaTextView"
        android:layout_marginStart="65dp"/>

    <TextView
        android:id="@+id/labelTelepon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/telepon"
        android:layout_below="@id/labelKelas"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/colon"
        android:layout_below="@id/kelasTextView"
        android:layout_marginStart="55dp"/>

    <TextView
        android:id="@+id/teleponTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Telepon"
        android:layout_below="@id/kelasTextView"
        android:layout_marginStart="65dp"/>

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/email"
        android:layout_below="@id/labelTelepon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/colon"
        android:layout_below="@id/teleponTextView"
        android:layout_marginStart="55dp"/>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email"
        android:layout_below="@id/teleponTextView"
        android:layout_marginStart="65dp"/>

    <TextView
        android:id="@+id/labelSosmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/sosmed"
        android:layout_below="@id/labelEmail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/colon"
        android:layout_below="@id/emailTextView"
        android:layout_marginStart="55dp"/>

    <TextView
        android:id="@+id/sosmedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sosmed"
        android:layout_below="@id/emailTextView"
        android:layout_marginStart="65dp"/>

</RelativeLayout>
<!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_dialog_rounded"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_person" />

        <TextView
            android:id="@+id/kelasTextView"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:textSize="14sp"
            tools:text="IF4" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/namaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="2"
            android:textAllCaps="true"
            android:textSize="14sp"
            tools:text="Ferry Hermawan"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="12sp"
            tools:text="ferryhermawan@gmail.com" />

        <TextView
            android:id="@+id/teleponTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            tools:text="08997161211" />

        <TextView
            android:id="@+id/sosmedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            tools:text="ferrympe7" />

    </LinearLayout>


    <TextView
        android:id="@+id/nimTextView"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textSize="16sp"
        tools:text="10116154" />

</LinearLayout>-->
